fix view all button on mobile bug

--- a/src/components/Events.css
+++ b/src/components/Events.css
@@ -174,6 +174,12 @@
     background-color: #d03f22;
 }
 
+@media (max-width: 767px) {
+  .desktop-only {
+    display: none !important;
+  }
+}
+
 /* Container for the entire details section */
 .tournament-details-section {
     padding: 3rem 4rem;
@@ -621,4 +627,10 @@
     color: #EF4444;
     margin-top: 10px;
     text-align: center;
+}
+
+@media (max-width: 767px) {
+  .desktop-only {
+    display: none !important;
+  }
 }
